config/components/kueue-viz/deployment.yaml
---
# Source: kueue/templates/kueue-viz/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kueue-viz-backend
  namespace: kueue-viz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kueue-viz-backend
  template:
    metadata:
      labels:
        app: kueue-viz-backend
    spec:
      containers:
        - name: backend
          image: us-central1-docker.pkg.dev/k8s-staging-images/kueue/kueue-viz-backend:main-latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080

---
# Source: kueue/templates/kueue-viz/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kueue-viz-frontend
  namespace: kueue-viz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kueue-viz-frontend
  template:
    metadata:
      labels:
        app: kueue-viz-frontend
    spec:

      containers:
        - name: frontend
          image: us-central1-docker.pkg.dev/k8s-staging-images/kueue/kueue-viz-frontend:main-latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
